--- a/gitops/app-of-apps/root.yaml
+++ b/gitops/app-of-apps/root.yaml
@@ -10,7 +10,7 @@ spec:
     targetRevision: main
     path: gitops/infra
   destination:
-    service: https://kubernetes.default.svc
+    server: https://kubernetes.default.svc
     namespace: argocd
   syncPolicy:
     automated:
